NITdroid: Revert back DNOTIFY=y and SYSFS_DEPRECATED=y.

--- a/arch/arm/configs/rx51_nitdroid_defconfig
+++ b/arch/arm/configs/rx51_nitdroid_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.28.NIT.04pre8
-# Wed Jul 14 15:09:34 2010
+# Linux kernel version: 2.6.28.NIT.04pre
+# Fri Jul 16 18:58:35 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -61,7 +61,14 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_MM_OWNER=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
-# CONFIG_SYSFS_DEPRECATED_FEATURES is not set
+CONFIG_SYSFS_DEPRECATED_FEATURES=y
+CONFIG_SYSFS_DEPRECATED_UEVENT=y
+# CONFIG_SYSFS_DEPRECATED_LINKS is not set
+# CONFIG_SYSFS_DEPRECATED_BUS is not set
+# CONFIG_SYSFS_DEPRECATED_BLOCK is not set
+# CONFIG_SYSFS_DEPRECATED_PART is not set
+# CONFIG_SYSFS_DEPRECATED_SCSI is not set
+# CONFIG_SYSFS_DEPRECATED_SOUND is not set
 # CONFIG_RELAY is not set
 # CONFIG_NAMESPACES is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -1846,7 +1853,7 @@ CONFIG_XFS_FS=m
 # CONFIG_XFS_RT is not set
 # CONFIG_XFS_DEBUG is not set
 # CONFIG_OCFS2_FS is not set
-# CONFIG_DNOTIFY is not set
+CONFIG_DNOTIFY=y
 CONFIG_INOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_QUOTA is not set
