NITdroid: RTC reverted back into kernel proper.

--- a/arch/arm/configs/rx51_nitdroid_defconfig
+++ b/arch/arm/configs/rx51_nitdroid_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux kernel version: 2.6.28.NIT.04pre
-# Fri Jul 16 18:58:35 2010
+# Linux kernel version: 2.6.28.NIT.04pre11
+# Fri Jul 16 19:49:04 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -381,6 +381,7 @@ CONFIG_PM_DEBUG=y
 CONFIG_CAN_PM_TRACE=y
 CONFIG_PM_SLEEP=y
 CONFIG_SUSPEND=y
+# CONFIG_PM_TEST_SUSPEND is not set
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_HAS_WAKELOCK=y
 CONFIG_HAS_EARLYSUSPEND=y
@@ -1745,7 +1746,10 @@ CONFIG_LEDS_TRIGGER_SLEEP=y
 CONFIG_SWITCH=m
 CONFIG_SWITCH_GPIO=m
 CONFIG_RTC_LIB=y
-CONFIG_RTC_CLASS=m
+CONFIG_RTC_CLASS=y
+CONFIG_RTC_HCTOSYS=y
+CONFIG_RTC_HCTOSYS_DEVICE="rtc0"
+# CONFIG_RTC_DEBUG is not set
 
 #
 # RTC interfaces
@@ -1770,7 +1774,7 @@ CONFIG_RTC_INTF_ALARM=y
 # CONFIG_RTC_DRV_PCF8563 is not set
 # CONFIG_RTC_DRV_PCF8583 is not set
 # CONFIG_RTC_DRV_M41T80 is not set
-CONFIG_RTC_DRV_TWL4030=m
+CONFIG_RTC_DRV_TWL4030=y
 # CONFIG_RTC_DRV_S35390A is not set
 # CONFIG_RTC_DRV_FM3130 is not set
 # CONFIG_RTC_DRV_RX8581 is not set
